.editorconfig: Specify width of indentation
4 spaces for most of the sources

Signed-off-by: Alberto Scotta <albertoscotta93@gmail.com>

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,8 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-# Tab indentation (no size specified)
+# Tab indentation (4 space)
 [*.{cpp,h,cmake}]
 indent_style = space
+indent_size = 4
+
