--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,6 @@ add_custom_target(cppcheck COMMAND "cppcheck --enable=all -I \"${CMAKE_CURRENT_L
 find_package(Doxygen QUIET)
 if (DOXYGEN_FOUND)
     add_custom_target(doc
-        COMMAND "${CMAKE_COMMAND} -E remove_directory html"
-        COMMAND "${DOXYGEN_EXECUTABLE} Doxyfile" WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")
+	COMMAND ${CMAKE_COMMAND} -E remove_directory html
+        COMMAND ${DOXYGEN_EXECUTABLE} Doxyfile WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")
 endif()
