--- a/.travis.yml
+++ b/.travis.yml
@@ -1,51 +1,46 @@
 language: cpp
 
+os:
+  - linux
+  - osx
+
+dist: xenial
+
+osx_image: xcode12.2
+
 git:
   depth: false
 
 addons:
   apt:
     packages:
-    - qtbase5-dev
-    - qttools5-dev-tools
-    - libqt5opengl5-dev
-    - libusb-1.0-0-dev
-    - libfftw3-dev
+      - qtbase5-dev
+      - qttools5-dev-tools
+      - libqt5opengl5-dev
+      - libusb-1.0-0-dev
+      - libfftw3-dev
   homebrew:
-    update: true
     packages:
-    - fftw
-
-jobs:
-  include:
-    - compiler: gcc
-      env: CMAKE_CXX_COMPILER=g++-5
-      os: linux
-      dist: xenial
-    - compiler: clang
-      env: CMAKE_CXX_COMPILER=/usr/bin/clang++
-      os: osx
-      osx_image: xcode12.2
+      - fftw
 
 before_install:
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export CMAKE_PREFIX_PATH=$(brew --prefix qt5); fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export CMAKE_PREFIX_PATH=$(brew --prefix qt5); fi
 
 before_script:
-    - mkdir build
-    - cd build
-    - cmake -DCMAKE_CXX_COMPILER=$CMAKE_CXX_COMPILER -DCMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH ../
+ - mkdir build
+ - cd build
+ - cmake -DCMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH ../
 
 script:
-    - make -j4
+ - make -j4
 
 before_deploy:
-    - sudo make package
+ - sudo make package
 
 deploy:
   provider: releases
-  api_key: $GITHUB_TOKEN
+  token: $GITHUB_TOKEN
   file_glob: true
   file: packages/*
-  skip_cleanup: true
   on:
     tags: true
