Fix translation building
+ fix empty translation.qrc
+ fix variables scope in cmake for translations

Signed-off-by: Alberto Scotta <albertoscotta93@gmail.com>

--- a/openhantek/CMakeLists.txt
+++ b/openhantek/CMakeLists.txt
@@ -37,7 +37,8 @@ if(WIN32 AND MINGW)
 endif()
 
 # make executable
-add_executable(${PROJECT_NAME} ${EXECTYPE} ${SRC} ${HEADERS} ${UI} ${QRC} ${TRANSLATION_BIN_FILES} ${TRANSLATION_QRC})
+add_executable(${PROJECT_NAME} ${EXECTYPE} ${SRC} ${HEADERS} ${UI} ${QRC} ${TRANSLATION_QRC})
+add_dependencies(${PROJECT_NAME} translations)
 target_link_libraries(${PROJECT_NAME} Qt5::Widgets Qt5::PrintSupport Qt5::OpenGL ${OPENGL_LIBRARIES} )
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_range_for)
 if(MSVC)
